[gd_scene load_steps=20 format=3 uid="uid://bw0ew7stacm2"]

[ext_resource type="Texture2D" uid="uid://cx6grcbdlauol" path="res://Assets/Sprites/RobotPlayer.png" id="1_no2yp"]
[ext_resource type="Script" path="res://Scripts/Actors/Player/player.gd" id="1_wkyp0"]
[ext_resource type="Resource" uid="uid://3y2cdy74dhsn" path="res://Scripts/Actors/Player/player_move_stats.tres" id="2_crh5y"]
[ext_resource type="Script" path="res://Scripts/Components/StateMachine/StateMachine.gd" id="3_kfjht"]
[ext_resource type="Script" path="res://Scripts/Actors/Player/PlayerStates/idle.gd" id="4_2w84y"]
[ext_resource type="Script" path="res://Scripts/Actors/Player/PlayerStates/move.gd" id="5_2oo8f"]
[ext_resource type="Script" path="res://Scripts/Actors/Player/PlayerStates/jump.gd" id="6_c3blf"]
[ext_resource type="Script" path="res://Scripts/Actors/Player/PlayerStates/dash.gd" id="7_i2536"]
[ext_resource type="Script" path="res://Scripts/Actors/Player/PlayerStates/fall.gd" id="7_y3686"]
[ext_resource type="PackedScene" uid="uid://ba0doa040rdwp" path="res://Scripts/Components/Input/input_component.tscn" id="9_yvic6"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_lwucn"]
radius = 6.0
height = 18.0

[sub_resource type="AtlasTexture" id="AtlasTexture_v5ksq"]
atlas = ExtResource("1_no2yp")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_asm6b"]
atlas = ExtResource("1_no2yp")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ba0tu"]
atlas = ExtResource("1_no2yp")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2g2sn"]
atlas = ExtResource("1_no2yp")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3q6el"]
atlas = ExtResource("1_no2yp")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ypnhx"]
atlas = ExtResource("1_no2yp")
region = Rect2(80, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_bgd2a"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v5ksq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_asm6b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ba0tu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2g2sn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3q6el")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ypnhx")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ai5n8"]
radius = 8.0
height = 20.0

[node name="Player" type="CharacterBody2D" groups=["Player"]]
position = Vector2(120, 84)
collision_layer = 3
collision_mask = 31
script = ExtResource("1_wkyp0")
movement_stats = ExtResource("2_crh5y")

[node name="PlayerBody" type="CollisionShape2D" parent="." groups=["Player"]]
position = Vector2(0, -0.75)
shape = SubResource("CapsuleShape2D_lwucn")
debug_color = Color(0.86713, 0.322044, 0.392222, 0.42)

[node name="PlayerSprite" type="AnimatedSprite2D" parent="." groups=["Player"]]
sprite_frames = SubResource("SpriteFrames_bgd2a")

[node name="Hitbox" type="Area2D" parent="." groups=["Player"]]
collision_layer = 2
collision_mask = 31

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox" groups=["Player"]]
shape = SubResource("CapsuleShape2D_ai5n8")
debug_color = Color(0, 0.6, 0.701961, 0.129412)

[node name="InputComponent" parent="." instance=ExtResource("9_yvic6")]

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("inital_state")]
script = ExtResource("3_kfjht")
inital_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine" node_paths=PackedStringArray("move_state", "jump_state", "fall_state")]
script = ExtResource("4_2w84y")
move_state = NodePath("../Move")
jump_state = NodePath("../Jump")
fall_state = NodePath("../Fall")

[node name="Move" type="Node" parent="StateMachine" node_paths=PackedStringArray("jump_state", "fall_state", "idle_state", "dash_state")]
script = ExtResource("5_2oo8f")
jump_state = NodePath("../Jump")
fall_state = NodePath("../Fall")
idle_state = NodePath("../Idle")
dash_state = NodePath("../Dash")

[node name="Jump" type="Node" parent="StateMachine" node_paths=PackedStringArray("fall_state", "jump_state", "dash_state")]
script = ExtResource("6_c3blf")
fall_state = NodePath("../Fall")
jump_state = NodePath(".")
dash_state = NodePath("../Dash")

[node name="Fall" type="Node" parent="StateMachine" node_paths=PackedStringArray("move_state", "idle_state", "jump_state", "dash_state")]
script = ExtResource("7_y3686")
move_state = NodePath("../Move")
idle_state = NodePath("../Idle")
jump_state = NodePath("../Jump")
dash_state = NodePath("../Dash")

[node name="Dash" type="Node" parent="StateMachine" node_paths=PackedStringArray("move_state", "idle_state", "fall_state")]
script = ExtResource("7_i2536")
move_state = NodePath("../Move")
idle_state = NodePath("../Idle")
fall_state = NodePath("../Fall")

[node name="CameraFollow" type="Camera2D" parent="."]
zoom = Vector2(1.5, 1.5)
position_smoothing_enabled = true
drag_horizontal_enabled = true
drag_vertical_enabled = true
drag_horizontal_offset = 0.69
drag_vertical_offset = -0.79
drag_left_margin = 0.38

[connection signal="body_entered" from="Hitbox" to="." method="_on_body_entered"]
